# AndroidJniDemo

./: .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/top/dawenhing/androidjnidemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/top/dawenhing/androidjnidemo/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/top/dawenhing/androidjnidemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
nativelib/: build.gradle
nativelib/src/androidTest/java/top/dawenhing/nativelib/: ExampleInstrumentedTest.java
nativelib/src/main/cpp/: CMakeLists.txt  nativelib.cpp
nativelib/src/main/cpp/jni/: nativ_class.cpp  native_class.h  nativelib.cpp
nativelib/src/main/java/top/dawenhing/nativelib/: NativeClass.java  NativeLib.java
nativelib/src/test/java/top/dawenhing/nativelib/: ExampleUnitTest.java
